Proyecto Node JS/generated/Mi_analizador2Parser.js
// Generated from c:/Users/anage/OneDrive/Documents/Lucas/UTN/Sintaxis y semantica de los lenguajes/ssl-antlr-Mi_analizador2/Mi_analizador2.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import Mi_analizador2Listener from './Mi_analizador2Listener.js';
import Mi_analizador2Visitor from './Mi_analizador2Visitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class Mi_analizador2Parser extends antlr4.Parser {

    static grammarFileName = "Mi_analizador2.g4";
    static literalNames = [ null, "'variable'", "'funcion'", "'='", "';'", 
                            "'('", "')'", "'{'", "'}'", "','", "'mayusculas'", 
                            "'minusculas'", "'longitud'", "'invertir'", 
                            "'reemplazar'", "'+'", "'imprimir'", "'devolver'" ];
    static symbolicNames = [ null, "VARIABLE", "FUNCION", "IGUAL", "PUNTOYCOMA", 
                             "PAR_IZQ", "PAR_DER", "LLAVE_IZQ", "LLAVE_DER", 
                             "COMA", "MAYUSCULAS", "MINUSCULAS", "LONGITUD", 
                             "INVERTIR", "REEMPLAZAR", "SUMA", "IMPRIMIR", 
                             "DEVOLVER", "TEXTO", "NUMERO", "NOMBRE", "WS" ];
    static ruleNames = [ "programa", "declaracion", "funcion", "argumentos", 
                         "instrucciones", "operacion_texto", "transformacion", 
                         "concatenar", "impresion", "retorno", "valor", 
                         "cadena", "variable", "ejecucion" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = Mi_analizador2Parser.ruleNames;
        this.literalNames = Mi_analizador2Parser.literalNames;
        this.symbolicNames = Mi_analizador2Parser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, Mi_analizador2Parser.RULE_programa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1114118) !== 0)) {
	            this.state = 31;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 1:
	                this.state = 28;
	                this.declaracion();
	                break;
	            case 2:
	                this.state = 29;
	                this.funcion();
	                break;
	            case 16:
	            case 20:
	                this.state = 30;
	                this.ejecucion();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 35;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracion() {
	    let localctx = new DeclaracionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, Mi_analizador2Parser.RULE_declaracion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.match(Mi_analizador2Parser.VARIABLE);
	        this.state = 37;
	        this.match(Mi_analizador2Parser.NOMBRE);
	        this.state = 40;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 38;
	            this.match(Mi_analizador2Parser.IGUAL);
	            this.state = 39;
	            this.valor();
	        }

	        this.state = 42;
	        this.match(Mi_analizador2Parser.PUNTOYCOMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcion() {
	    let localctx = new FuncionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, Mi_analizador2Parser.RULE_funcion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        this.match(Mi_analizador2Parser.FUNCION);
	        this.state = 45;
	        this.match(Mi_analizador2Parser.NOMBRE);
	        this.state = 50;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 46;
	            this.match(Mi_analizador2Parser.PAR_IZQ);
	            this.state = 47;
	            this.argumentos();
	            this.state = 48;
	            this.match(Mi_analizador2Parser.PAR_DER);
	        }

	        this.state = 52;
	        this.match(Mi_analizador2Parser.LLAVE_IZQ);
	        this.state = 53;
	        this.instrucciones();
	        this.state = 54;
	        this.match(Mi_analizador2Parser.LLAVE_DER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentos() {
	    let localctx = new ArgumentosContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, Mi_analizador2Parser.RULE_argumentos);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this.variable();
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9) {
	            this.state = 57;
	            this.match(Mi_analizador2Parser.COMA);
	            this.state = 58;
	            this.argumentos();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instrucciones() {
	    let localctx = new InstruccionesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, Mi_analizador2Parser.RULE_instrucciones);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1245184) !== 0)) {
	            this.state = 64;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 20:
	                this.state = 61;
	                this.operacion_texto();
	                break;
	            case 16:
	                this.state = 62;
	                this.impresion();
	                break;
	            case 17:
	                this.state = 63;
	                this.retorno();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operacion_texto() {
	    let localctx = new Operacion_textoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, Mi_analizador2Parser.RULE_operacion_texto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.variable();
	        this.state = 70;
	        this.match(Mi_analizador2Parser.IGUAL);
	        this.state = 71;
	        this.transformacion();
	        this.state = 72;
	        this.match(Mi_analizador2Parser.PAR_IZQ);
	        this.state = 73;
	        this.cadena();
	        this.state = 74;
	        this.match(Mi_analizador2Parser.PAR_DER);
	        this.state = 75;
	        this.match(Mi_analizador2Parser.PUNTOYCOMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transformacion() {
	    let localctx = new TransformacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, Mi_analizador2Parser.RULE_transformacion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 31744) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	concatenar() {
	    let localctx = new ConcatenarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, Mi_analizador2Parser.RULE_concatenar);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.variable();
	        this.state = 80;
	        this.match(Mi_analizador2Parser.IGUAL);
	        this.state = 81;
	        this.cadena();
	        this.state = 82;
	        this.match(Mi_analizador2Parser.SUMA);
	        this.state = 83;
	        this.cadena();
	        this.state = 84;
	        this.match(Mi_analizador2Parser.PUNTOYCOMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	impresion() {
	    let localctx = new ImpresionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, Mi_analizador2Parser.RULE_impresion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(Mi_analizador2Parser.IMPRIMIR);
	        this.state = 87;
	        this.match(Mi_analizador2Parser.PAR_IZQ);
	        this.state = 88;
	        this.valor();
	        this.state = 89;
	        this.match(Mi_analizador2Parser.PAR_DER);
	        this.state = 90;
	        this.match(Mi_analizador2Parser.PUNTOYCOMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	retorno() {
	    let localctx = new RetornoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, Mi_analizador2Parser.RULE_retorno);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(Mi_analizador2Parser.DEVOLVER);
	        this.state = 93;
	        this.valor();
	        this.state = 94;
	        this.match(Mi_analizador2Parser.PUNTOYCOMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, Mi_analizador2Parser.RULE_valor);
	    try {
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 96;
	            this.match(Mi_analizador2Parser.TEXTO);
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 97;
	            this.match(Mi_analizador2Parser.NUMERO);
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 98;
	            this.variable();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, Mi_analizador2Parser.RULE_cadena);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.match(Mi_analizador2Parser.TEXTO);
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.variable();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, Mi_analizador2Parser.RULE_variable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(Mi_analizador2Parser.NOMBRE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ejecucion() {
	    let localctx = new EjecucionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, Mi_analizador2Parser.RULE_ejecucion);
	    try {
	        this.state = 114;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 20:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 107;
	            this.match(Mi_analizador2Parser.NOMBRE);
	            this.state = 108;
	            this.match(Mi_analizador2Parser.PAR_IZQ);
	            this.state = 109;
	            this.argumentos();
	            this.state = 110;
	            this.match(Mi_analizador2Parser.PAR_DER);
	            this.state = 111;
	            this.match(Mi_analizador2Parser.PUNTOYCOMA);
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 113;
	            this.impresion();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

Mi_analizador2Parser.EOF = antlr4.Token.EOF;
Mi_analizador2Parser.VARIABLE = 1;
Mi_analizador2Parser.FUNCION = 2;
Mi_analizador2Parser.IGUAL = 3;
Mi_analizador2Parser.PUNTOYCOMA = 4;
Mi_analizador2Parser.PAR_IZQ = 5;
Mi_analizador2Parser.PAR_DER = 6;
Mi_analizador2Parser.LLAVE_IZQ = 7;
Mi_analizador2Parser.LLAVE_DER = 8;
Mi_analizador2Parser.COMA = 9;
Mi_analizador2Parser.MAYUSCULAS = 10;
Mi_analizador2Parser.MINUSCULAS = 11;
Mi_analizador2Parser.LONGITUD = 12;
Mi_analizador2Parser.INVERTIR = 13;
Mi_analizador2Parser.REEMPLAZAR = 14;
Mi_analizador2Parser.SUMA = 15;
Mi_analizador2Parser.IMPRIMIR = 16;
Mi_analizador2Parser.DEVOLVER = 17;
Mi_analizador2Parser.TEXTO = 18;
Mi_analizador2Parser.NUMERO = 19;
Mi_analizador2Parser.NOMBRE = 20;
Mi_analizador2Parser.WS = 21;

Mi_analizador2Parser.RULE_programa = 0;
Mi_analizador2Parser.RULE_declaracion = 1;
Mi_analizador2Parser.RULE_funcion = 2;
Mi_analizador2Parser.RULE_argumentos = 3;
Mi_analizador2Parser.RULE_instrucciones = 4;
Mi_analizador2Parser.RULE_operacion_texto = 5;
Mi_analizador2Parser.RULE_transformacion = 6;
Mi_analizador2Parser.RULE_concatenar = 7;
Mi_analizador2Parser.RULE_impresion = 8;
Mi_analizador2Parser.RULE_retorno = 9;
Mi_analizador2Parser.RULE_valor = 10;
Mi_analizador2Parser.RULE_cadena = 11;
Mi_analizador2Parser.RULE_variable = 12;
Mi_analizador2Parser.RULE_ejecucion = 13;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_programa;
    }

	declaracion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclaracionContext);
	    } else {
	        return this.getTypedRuleContext(DeclaracionContext,i);
	    }
	};

	funcion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FuncionContext);
	    } else {
	        return this.getTypedRuleContext(FuncionContext,i);
	    }
	};

	ejecucion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(EjecucionContext);
	    } else {
	        return this.getTypedRuleContext(EjecucionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeclaracionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_declaracion;
    }

	VARIABLE() {
	    return this.getToken(Mi_analizador2Parser.VARIABLE, 0);
	};

	NOMBRE() {
	    return this.getToken(Mi_analizador2Parser.NOMBRE, 0);
	};

	PUNTOYCOMA() {
	    return this.getToken(Mi_analizador2Parser.PUNTOYCOMA, 0);
	};

	IGUAL() {
	    return this.getToken(Mi_analizador2Parser.IGUAL, 0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterDeclaracion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitDeclaracion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitDeclaracion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FuncionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_funcion;
    }

	FUNCION() {
	    return this.getToken(Mi_analizador2Parser.FUNCION, 0);
	};

	NOMBRE() {
	    return this.getToken(Mi_analizador2Parser.NOMBRE, 0);
	};

	LLAVE_IZQ() {
	    return this.getToken(Mi_analizador2Parser.LLAVE_IZQ, 0);
	};

	instrucciones() {
	    return this.getTypedRuleContext(InstruccionesContext,0);
	};

	LLAVE_DER() {
	    return this.getToken(Mi_analizador2Parser.LLAVE_DER, 0);
	};

	PAR_IZQ() {
	    return this.getToken(Mi_analizador2Parser.PAR_IZQ, 0);
	};

	argumentos() {
	    return this.getTypedRuleContext(ArgumentosContext,0);
	};

	PAR_DER() {
	    return this.getToken(Mi_analizador2Parser.PAR_DER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterFuncion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitFuncion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitFuncion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ArgumentosContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_argumentos;
    }

	variable() {
	    return this.getTypedRuleContext(VariableContext,0);
	};

	COMA() {
	    return this.getToken(Mi_analizador2Parser.COMA, 0);
	};

	argumentos() {
	    return this.getTypedRuleContext(ArgumentosContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterArgumentos(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitArgumentos(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitArgumentos(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstruccionesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_instrucciones;
    }

	operacion_texto = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Operacion_textoContext);
	    } else {
	        return this.getTypedRuleContext(Operacion_textoContext,i);
	    }
	};

	impresion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ImpresionContext);
	    } else {
	        return this.getTypedRuleContext(ImpresionContext,i);
	    }
	};

	retorno = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RetornoContext);
	    } else {
	        return this.getTypedRuleContext(RetornoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterInstrucciones(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitInstrucciones(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitInstrucciones(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Operacion_textoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_operacion_texto;
    }

	variable() {
	    return this.getTypedRuleContext(VariableContext,0);
	};

	IGUAL() {
	    return this.getToken(Mi_analizador2Parser.IGUAL, 0);
	};

	transformacion() {
	    return this.getTypedRuleContext(TransformacionContext,0);
	};

	PAR_IZQ() {
	    return this.getToken(Mi_analizador2Parser.PAR_IZQ, 0);
	};

	cadena() {
	    return this.getTypedRuleContext(CadenaContext,0);
	};

	PAR_DER() {
	    return this.getToken(Mi_analizador2Parser.PAR_DER, 0);
	};

	PUNTOYCOMA() {
	    return this.getToken(Mi_analizador2Parser.PUNTOYCOMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterOperacion_texto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitOperacion_texto(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitOperacion_texto(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TransformacionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_transformacion;
    }

	MAYUSCULAS() {
	    return this.getToken(Mi_analizador2Parser.MAYUSCULAS, 0);
	};

	MINUSCULAS() {
	    return this.getToken(Mi_analizador2Parser.MINUSCULAS, 0);
	};

	LONGITUD() {
	    return this.getToken(Mi_analizador2Parser.LONGITUD, 0);
	};

	INVERTIR() {
	    return this.getToken(Mi_analizador2Parser.INVERTIR, 0);
	};

	REEMPLAZAR() {
	    return this.getToken(Mi_analizador2Parser.REEMPLAZAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterTransformacion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitTransformacion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitTransformacion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ConcatenarContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_concatenar;
    }

	variable() {
	    return this.getTypedRuleContext(VariableContext,0);
	};

	IGUAL() {
	    return this.getToken(Mi_analizador2Parser.IGUAL, 0);
	};

	cadena = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CadenaContext);
	    } else {
	        return this.getTypedRuleContext(CadenaContext,i);
	    }
	};

	SUMA() {
	    return this.getToken(Mi_analizador2Parser.SUMA, 0);
	};

	PUNTOYCOMA() {
	    return this.getToken(Mi_analizador2Parser.PUNTOYCOMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterConcatenar(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitConcatenar(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitConcatenar(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ImpresionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = Mi_analizador2Parser.RULE_impresion;
    }

	IMPRIMIR() {
	    return this.getToken(Mi_analizador2Parser.IMPRIMIR, 0);
	};

	PAR_IZQ() {
	    return this.getToken(Mi_analizador2Parser.PAR_IZQ, 0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	PAR_DER() {
	    return this.getToken(Mi_analizador2Parser.PAR_DER, 0);
	};

	PUNTOYCOMA() {
	    return this.getToken(Mi_analizador2Parser.PUNTOYCOMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.enterImpresion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof Mi_analizador2Listener ) {
	        listener.exitImpresion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof Mi_analizador2Visitor ) {
	        return visitor.visitImpresion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class RetornoContext extends antlr4.ParserRuleContext {
